# Gaussian-Scene-Workbench

./: .gitignore  3DGS-Editor-0.1.0-win-x64.zip.sha256  3DGS-Editor-0.1.10-win-x64.zip.sha256  3DGS-Editor-0.1.4-win-x64.zip.sha256  3DGS-Editor-0.1.6-win-x64.zip.sha256  3DGS-Editor-0.1.9-win-x64.zip.sha256  CONTEXT.md  Check 3DGS Editor Environment.cmd  LICENSE  README.md  README_RELEASE.md  Setup 3DGS Editor.cmd  build_manifest.json  design-qa.md  release_notes_v0.1.0.md  release_notes_v0.1.10.md  release_notes_v0.1.12.md  release_notes_v0.1.4.md  release_notes_v0.1.6.md  release_notes_v0.1.9.md  release_notes_v0.2.10.md  release_notes_v0.2.11.md  release_notes_v0.2.12.md  release_notes_v0.2.14.md  release_notes_v0.2.2.md  release_notes_v0.2.3.md  release_notes_v0.2.6.md  release_notes_v0.2.7.md  release_notes_v0.2.8.md  version
.github/workflows/: native-windows.yml
crop_editor/: POSTSHOT_EQUIVALENT_ROADMAP.md  README_CROP_EDITOR.md  package-lock.json  package.json  server.py  video_extract.py
crop_editor/static/: app.js  floating-panels.mjs  fps-meter.mjs  index.html  interaction.mjs  mesh-chunk-loader.mjs  mesh-edit.mjs  mesh-loader.mjs  mesh-mode-capabilities.mjs  mesh-state.mjs  selection-picking.mjs  styles.css  sugar-options.mjs  texture-options.mjs  texture-rendering.mjs  textured-mesh-loader.mjs  training-environment.mjs  training-files.mjs  training-targets.mjs  view-gizmos.mjs
crop_editor/tests/: app-startup.test.mjs  floating-panels.test.mjs  fps-meter.test.mjs  interaction.test.mjs  mesh-chunk-loader.test.mjs  mesh-edit.test.mjs  mesh-loader.test.mjs  mesh-mode-capabilities.test.mjs  mesh-state.test.mjs  selection-picking.test.mjs  sugar-options.test.mjs  test_scene_workspace.py  test_training_backends.py  texture-options.test.mjs  texture-rendering.test.mjs  textured-mesh-loader.test.mjs  training-environment.test.mjs  training-files.test.mjs  training-targets.test.mjs  view-gizmos.test.mjs
docs/: NATIVE_MIGRATION.md  NATIVE_PARITY.md  WINDOWS_APPLICATION_CONTROL.md
gaussian-splatting/: convert.py  train.py
gaussian-splatting/scene/: __init__.py  gaussian_model.py
gaussian-splatting/submodules/diff-gaussian-rasterization/: setup.py
gaussian-splatting/submodules/fused-ssim/: setup.py
gaussian-splatting/submodules/simple-knn/: setup.py
native/: CMakeLists.txt  README.md  build_manifest.json  resources.qrc
native/assets/: gsw-app-icon.rc
native/src/: AppTheme.cpp  AppTheme.h  BackendLocator.cpp  BackendLocator.h  ColmapSupport.cpp  ColmapSupport.h  DatasetImportDialog.cpp  DatasetImportDialog.h  DurableArtifactStore.cpp  DurableArtifactStore.h  ExternalBackupStore.cpp  ExternalBackupStore.h  MainWindow.cpp  MainWindow.h  MediaProjectBootstrap.cpp  MediaProjectBootstrap.h  NativeViewport.cpp  NativeViewport.h  NavigationGizmo.cpp  NavigationGizmo.h  PlyPointCloudLoader.cpp  PlyPointCloudLoader.h  ProcessSupervisor.cpp  ProcessSupervisor.h  ReconstructionDialog.cpp  ReconstructionDialog.h  RecoveryStore.cpp  RecoveryStore.h  SceneEditModel.cpp  SceneEditModel.h  ScreenSpaceSelection.cpp  ScreenSpaceSelection.h  TrainingDialog.cpp  TrainingDialog.h  TrainingOutputLocator.cpp  TrainingOutputLocator.h  ViewportCamera.cpp  ViewportCamera.h  WorkspaceDocument.cpp  WorkspaceDocument.h  (+1 more)
native/tests/: AppThemeTests.cpp  BackendLocatorTests.cpp  DatasetImportPlanTests.cpp  DurableArtifactStoreTests.cpp  ExternalBackupStoreTests.cpp  NavigationGizmoTests.cpp  ProcessSupervisorTests.cpp  RecoveryStoreTests.cpp  ViewportCameraTests.cpp  WorkspaceDocumentTests.cpp  generate_gaussian_visual_fixture.ps1
native/tests/helpers/: ProcessOutputFixture.cpp
native/worker/: gsw_worker.py  test_gsw_worker.py
resources/app/: README_DESKTOP_APP.md  Start 3DGS Editor.cmd  environment_wizard.js  exit_confirmation.js  main.js  package-lock.json  package.json  port_policy.js  preload.js  process_cleanup.js  project_root.js
resources/app/tests/: exit_confirmation.test.js  legacy_branding.test.js  port_policy.test.js  process_cleanup.test.js  project_root.test.js
scripts/: bootstrap_3dgs_editor.ps1  build_manifest.py  build_native.ps1  check_3dgs_env.ps1  convert_my_scene.bat  create_3dgs_env.bat  evaluate_image_metrics.py  fix_torch_dll.bat  make_comparison_grid.py  make_error_maps.py  open_3dgs_shell.bat  package_editor_release.ps1  postprocess_2dgs_mesh.py  psnr_common.py  render_psnr_views.py  run_sugar.py  setup-openmvs-source.ps1  sign_windows_artifacts.ps1  stage_native_backend.ps1  train_low_vram.ps1  train_my_scene_low_vram.bat  update_version.ps1
training_kit/: README.md  activate_3dgs_env.bat  apply_local_fixes.bat  apply_local_fixes.ps1  check_env.bat  continue_train.bat  convert_scene.bat  create_env.bat  crop_gaussians_bbox.bat  crop_gaussians_bbox.py  inspect_gaussian_bounds.bat  new_scene.bat  open_crop_editor.bat  open_desktop_editor.bat  open_shell.bat  train_full_30000.bat  train_quality_r4_30000.bat  train_quick_7000.bat
